refactor(format): Disable auto registration of format